<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/blossom"/>
    <TextView
        android:id="@+id/tv_app_name"
        android:layout_below="@id/iv_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:text="@string/app_name"
        android:textSize="23sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:id="@+id/lay_versions"
        android:layout_below="@id/tv_app_name"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_app_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version"/>
        <TextView
            android:id="@+id/tv_app_version_number"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_version_number"/>
    </LinearLayout>
    <View
        android:id="@+id/separator"
        android:layout_below="@id/lay_versions"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_height="1dp"
        android:layout_marginTop="15dp"
        android:background="#333333"/>
    <TextView
        android:id="@+id/credits"
        android:layout_below="@id/separator"
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/credits"/>
    <TextView
        android:id="@+id/repo_title"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo"/>
    <TextView
        android:id="@+id/repo_desc"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/repo_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/repo_link"/>


</RelativeLayout>