<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp">
        <!-- Title-->
        <TextView
            android:id="@+id/title_sensor_add_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"/>
        <View
            android:id="@+id/separator_title"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#333333"/>
        <!-- Name -->
        <EditText
            android:id="@+id/et_moni_name"
            android:hint="@string/name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical" />
        <!-- Type: analog-digital -->
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_analog"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/radio_analog"/>
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_digital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/radio_digital"/>
            </LinearLayout>
        </RadioGroup>
        <!-- Pin -->
        <EditText
            android:id="@+id/et_pin_number"
            android:hint="@string/pin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:inputType="number"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"/>
        <!-- Sensor type -->
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:text="@string/sensor_type"
                android:clickable="false" />
            <Spinner
                android:id="@+id/sensor_type_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
        <!-- Refresh rate -->
        <EditText
            android:id="@+id/et_refresh_rate"
            android:hint="@string/refresh_rate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:inputType="numberDecimal"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"/>
        <!-- Ensure refresh title-->
        <TextView
            android:layout_marginTop="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/ensure_refresh"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="4dp"
            android:background="#333333"/>
        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_yes"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/yes"/>
                <RadioButton
                    android:layout_weight="1"
                    android:id="@+id/radio_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no"/>
            </LinearLayout>
        </RadioGroup>
        <!-- Buttons-->
        <LinearLayout
            android:layout_marginTop="10dp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Button android:id="@+id/button_create_alert"
                android:text="@string/button_save"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
            <Button android:id="@+id/button_cancel_alert"
                android:text="@string/button_cancel_alarm_creation_delete"
                android:layout_weight="1"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
