<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="10dp">
    <TextView
        android:id="@+id/title_moni_item_creation"
        android:text="@string/add_monitoring_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"/>
    <View
        android:id="@+id/separator_title"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#333333"/>
    <!-- Name -->
    <EditText
        android:id="@+id/et_moni_name"
        android:hint="@string/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="14sp"
        android:gravity="center_vertical"
        android:layout_gravity="center_vertical" />
    <!-- icon/picture -->
    <TextView
        android:id="@+id/title_add_image"
        android:text="@string/add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"/>
    <View
        android:id="@+id/separator_add_image"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#333333"/>
    <TableLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp">
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingLeft="6dp">
            <ImageButton
                android:id="@+id/button_from_gallery"
                android:src="@drawable/ic_action_picture"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_image"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/from_gallery"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
        </TableRow>
        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:paddingLeft="6dp">
            <ImageButton
                android:id="@+id/button_take_photo"
                android:src="@drawable/ic_action_camera"
                android:background="@android:color/transparent"
                android:contentDescription="@string/content_description_image"
                android:layout_weight="1"/>
            <TextView
                android:text="@string/from_camera"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"/>
        </TableRow>
    </TableLayout>
    <!-- Related sensors -->
    <TextView
        android:id="@+id/title_add_sensors"
        android:text="@string/add_sensors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp"/>
    <View
        android:id="@+id/separator_add_sensors"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:background="#333333"/>
    <ListView
        android:id="@+id/list_check_sensors"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"/>

</LinearLayout>