<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
    <TextView
        android:id="@+id/alert_creation_editing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:paddingLeft="5dp"/>
    <View
        android:id="@+id/separator"
        android:layout_below="@id/alert_creation_editing"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="#333333"/>
    <TableLayout
        android:layout_below="@id/separator"
        android:layout_height="fill_parent"
        android:layout_width="fill_parent"
        android:layout_marginTop="10dp">

    <!-- Row select sensor -->
    <TableRow  android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:paddingLeft="6dp">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="19sp"
        android:layout_weight="1"
        android:layout_gravity="center_vertical"
        android:text="@string/select_sensor_spinner"
        android:clickable="false" />
        <Spinner
            android:id="@+id/sensor_list_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </TableRow>
    <!-- Row alert type-->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:paddingLeft="6dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:text="@string/alert_type_spinner"
            android:clickable="false" />
        <Spinner
            android:id="@+id/alert_type_spinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"/>
    </TableRow>
    <!-- Row value -->
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:paddingLeft="6dp"
        android:weightSum="2">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_weight="1.2"
            android:layout_gravity="center_vertical"
            android:text="@string/alert_fired_on_value"
            android:clickable="false"/>
        <EditText
            android:id="@+id/edit_alert_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:inputType="numberDecimal"
            android:hint=""/>
        <TextView
            android:id="@+id/next_to_edit_alert_value_shows_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="19sp"
            android:layout_weight="0.3"/>
    </TableRow>
    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:paddingLeft="6dp">
        <Button android:id="@+id/button_create_alert"
            android:text="@string/button_save_alarm_creation_delete"
            android:layout_weight="1"/>
        <Button android:id="@+id/button_cancel_alert"
            android:text="@string/button_cancel_alarm_creation_delete"
            android:layout_weight="1"/>
    </TableRow>

    </TableLayout>
</RelativeLayout>
